17946
```scala
class C {
  @throws[E2] def foo[E2 <: Exception] {}
}
```
```scala
22:17 ~/Projects/Kepler_snippet02/sandbox (topic/snippet02)$ scalac Test.scala 
Test.scala:2: error: not found: type E2
  @throws[E2] def foo[E2 <: Exception] {}
          ^
one error found
```
